overlay: Downscale task snapshots to 80%
This saves memory without a noticeable loss in quality.

Extracted from the Pixel stock ROM.

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Change-Id: Ic35b1636cc2c9b7fdaefa9c7c1164d0a79dd7871

--- a/overlay/common/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/common/frameworks/base/core/res/res/values/config.xml
@@ -131,4 +131,7 @@
     <!-- Flag indicating whether the assist disclosure can be disabled using
          ASSIST_DISCLOSURE_ENABLED. -->
     <bool name="config_allowDisablingAssistDisclosure">true</bool>
+
+    <!-- The amount to scale fullscreen snapshots for Overview and snapshot starting windows. -->
+    <item name="config_highResTaskSnapshotScale" format="float" type="dimen">0.8</item>
 </resources>
