--- a/overlay/common/frameworks/base/core/res/res/values/colors.xml
+++ b/overlay/common/frameworks/base/core/res/res/values/colors.xml
@@ -15,7 +15,7 @@
     limitations under the License.
 -->
 <resources>
-    <color name="accent_device_default_700">#1A73E8</color>
-    <color name="accent_device_default_dark">#8AB4F8</color>
-    <color name="accent_device_default_light">#1A73E8</color>
+    <color name="accent_device_default_700">#FF3377</color>
+    <color name="accent_device_default_dark">#FFDDEE</color>
+    <color name="accent_device_default_light">#FF3377</color>
 </resources>
